# LegendEngine

./: .gitignore  CMakeLists.txt  README.md  SECURITY.md
.github/workflows/: codeql.yml  tests.yml  windows.yml
LegendEngine/: CMakeLists.txt  Doxyfile
LegendEngine/Assets/Shaders/: builtin_solid.json  builtin_solid.slang  builtin_solid_lines.json  builtin_solid_lines.slang  builtin_textured.json  builtin_textured.slang  common.slang  test.c  test.cpp
LegendEngine/Headers/LE/: Application.hpp  LegendEngine.hpp  TetherBindings.hpp
LegendEngine/Headers/LE/Common/: Assert.hpp  Defs.hpp  Entrypoint.hpp  Enums.hpp  Platform.hpp  Stopwatch.hpp  Types.hpp  UID.hpp
LegendEngine/Headers/LE/Components/: ActiveCamera.hpp  Camera.hpp  Component.hpp  ComponentStorage.hpp  Light.hpp  Mesh.hpp  Transform.hpp
LegendEngine/Headers/LE/Events/: Event.hpp  EventBus.hpp  EventBusSubscriber.hpp  RenderEvent.hpp  UpdateEvent.hpp
LegendEngine/Headers/LE/Graphics/: ExplicitBackend.hpp  ExplicitRenderer.hpp  GraphicsBackend.hpp  GraphicsContext.hpp  GraphicsDriver.hpp  GraphicsResources.hpp  ImplicitBackend.hpp  RenderTarget.hpp  Renderer.hpp  ShaderInfo.hpp  ShaderManager.hpp  TetherWindowManager.hpp  Types.hpp  WindowManager.hpp
LegendEngine/Headers/LE/Graphics/API/: Buffer.hpp  CommandBuffer.hpp  DescriptorSetLayout.hpp  DynamicUniforms.hpp  GraphicsDriver.hpp  Image.hpp  Pipeline.hpp  RenderTarget.hpp  Sampler.hpp  Types.hpp
LegendEngine/Headers/LE/Graphics/Dummy/: DummyDriver.hpp  DummyGraphicsDriver.hpp  DummyRenderer.hpp  DummyResources.hpp  DummyWindowManager.hpp
LegendEngine/Headers/LE/Graphics/Explicit/: Buffer.hpp  BufferStager.hpp  ExplicitDriver.hpp  ExplicitMaterial.hpp  ExplicitMesh.hpp  ExplicitMeshData.hpp  ExplicitRenderTarget.hpp  ExplicitRenderer.hpp  ExplicitResources.hpp  ExplicitScene.hpp  ExplicitShader.hpp  ExplicitTexture2D.hpp  ExplicitTexture2DArray.hpp  PerFrameBuffer.hpp  RenderTarget.hpp  SimpleBuffer.hpp  SmartBuffer.hpp
LegendEngine/Headers/LE/Graphics/Implicit/: ImplicitRenderer.hpp
LegendEngine/Headers/LE/IO/: Logger.hpp  LoggerSinks.hpp  TextureData.hpp
LegendEngine/Headers/LE/Math/: AABB.hpp  Constants.hpp  Math.hpp  Matrix4x4.hpp  Quaternion.hpp  Ray.hpp  Types.hpp  Vector.hpp
LegendEngine/Headers/LE/Math/Funcs/: Funcs.hpp  Generic.hpp  Geometry.hpp  Matrix4x4Funcs.hpp  QuaternionFuncs.hpp  VectorFuncs.hpp
LegendEngine/Headers/LE/Physics/: AABB.hpp  PhysicsTests.hpp
LegendEngine/Headers/LE/Resources/: Material.hpp  MeshData.hpp  Resource.hpp  ResourceManager.hpp  Shader.hpp  Texture.hpp  Texture2D.hpp  Texture2DArray.hpp
LegendEngine/Headers/LE/World/: Archetype.hpp  ECS.hpp  Entity.hpp  EntityCreator.hpp  Scene.hpp
LegendEngine/Platform/: CMakeLists.txt
LegendEngine/Platform/Vulkan/: BufferStager.cpp  BufferStager.hpp  DescriptorSet.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  GraphicsContext.cpp  GraphicsContext.hpp  InstanceUtils.cpp  InstanceUtils.hpp  PlatformUtils.cpp  PlatformUtils.hpp  PoolManager.cpp  PoolManager.hpp  RenderTarget.cpp  RenderTarget.hpp  Renderer.cpp  Renderer.hpp  ShaderModule.cpp  ShaderModule.hpp  VkDefs.hpp  VmaImplementation.cpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanDriver.cpp  VulkanDriver.hpp  VulkanGraphicsDriver.cpp  VulkanGraphicsDriver.hpp  VulkanHppDynamicLoader.cpp  VulkanImage.cpp  VulkanImage.hpp  VulkanTypes.cpp  VulkanTypes.hpp
LegendEngine/Platform/Vulkan/API/: Buffer.cpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  DynamicUniforms.cpp  DynamicUniforms.hpp  Image.cpp  Image.hpp  PerFrameBuffer.cpp  PerFrameBuffer.hpp  Pipeline.cpp  Pipeline.hpp  Sampler.cpp  Sampler.hpp  SimpleBuffer.cpp  SimpleBuffer.hpp  SmartBuffer.cpp  SmartBuffer.hpp
LegendEngine/Platform/Vulkan/Shaders/: CMakeLists.txt  solid.frag  solid.vert  textured.frag  textured.vert
LegendEngine/Source/: Application.cpp
LegendEngine/Source/Common/: ComponentStorage.cpp  Stopwatch.cpp  UID.cpp
LegendEngine/Source/Components/: Camera.cpp  ComponentStorage.cpp  Transform.cpp
LegendEngine/Source/Events/: Event.cpp  EventBus.cpp  EventBusSubscriber.cpp  RenderEvent.cpp  UpdateEvent.cpp
LegendEngine/Source/Graphics/: ExplicitRenderer.cpp  GraphicsContext.cpp  GraphicsResources.cpp  RenderTarget.cpp  Renderer.cpp  ShaderInfo.cpp  ShaderManager.cpp  TetherWindowManager.cpp  Types.cpp  WindowManager.cpp
LegendEngine/Source/Graphics/API/: RenderTarget.cpp
LegendEngine/Source/Graphics/Dummy/: DummyDriver.cpp  DummyRenderer.cpp  DummyResources.cpp  DummyWindowManager.cpp
LegendEngine/Source/Graphics/Explicit/: BufferStager.cpp  ExplicitMaterial.cpp  ExplicitMesh.cpp  ExplicitMeshData.cpp  ExplicitRenderTarget.cpp  ExplicitRenderer.cpp  ExplicitResources.cpp  ExplicitScene.cpp  ExplicitTexture2D.cpp  ExplicitTexture2DArray.cpp  PerFrameBuffer.cpp  SimpleBuffer.cpp  SmartBuffer.cpp
LegendEngine/Source/IO/: Logger.cpp  LoggerSinks.cpp  TextureData.cpp
LegendEngine/Source/Math/: Ray.cpp
LegendEngine/Source/Math/Funcs/: Geometry.cpp  QuaternionFuncs.cpp
LegendEngine/Source/Physics/: AABB.cpp  PhysicsTests.cpp
LegendEngine/Source/Resources/: Material.cpp  MeshData.cpp  Resource.cpp  ResourceManager.cpp  Shader.cpp  Texture.cpp  Texture2D.cpp  Texture2DArray.cpp
LegendEngine/Source/World/: Archetype.cpp  ECS.cpp  Entity.cpp  EntityCreator.cpp  Scene.cpp
LegendEngine/Tests/: CMakeLists.txt  ECS.cpp  Math.cpp
LegendEngine/Tests/Visual/: CMakeLists.txt
LegendEngine/cmake/: Assets.cmake  Deps.cmake
LegendShaders/: CMakeLists.txt  README.md  mingw_compat.h
LegendShaders/Source/: Main.cpp  ModuleRegistry.cpp  ModuleRegistry.hpp  Options.cpp  Options.hpp  OutputGenerator.cpp  OutputGenerator.hpp  Program.cpp  Program.hpp  SlangUtils.cpp  SlangUtils.hpp
LegendShaders/include/lesh/: Shader.hpp
Legendary/: CMakeLists.txt  README.md
Legendary/Source/: Main.cpp
